--- a/RawERD/Views/Home/About.cshtml
+++ b/RawERD/Views/Home/About.cshtml
@@ -1,7 +1,30 @@
-﻿@{
+﻿@using RawERD.Data
+@model IList<User>
+@{
+    IList<User> userList = Model;
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+
+<table>
+    <tr>
+        <th>Id</th>
+        <th>Username</th>
+        <th>Name</th>
+    </tr>
+
+    @foreach (User u in userList.ToList())
+    {
+        <tr>
+            <td>@u.idUser</td>
+            <td>@u.username</td>
+            <td>@u.name</td>
+        </tr>
+
+    }
+
+
+</table>
