adicionado error controller adicionadas error views adicionada rota error adicionadas home views for account disabled and removed alterados os menus no _layout (app name) e _loginPartial (recover) adicionada Recover view adicionado modelo RecoverViewModel adicionado index ao AccountController adicionado recover ao AccountController

--- a/RawERD/Views/Home/Contact.cshtml
+++ b/RawERD/Views/Home/Contact.cshtml
@@ -1,17 +1,21 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contacts";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div>
+    <h2>Contact</h2>
+    <div>
+        <img src="https://media.licdn.com/media/p/1/005/04c/0a7/016f777.jpg" title="Luís Brás" />
+        <br />Luís Brás
+        <br />27401
+        <br /><a href="mailto:lbras@lbras.net">lbras@lbras.net</a>
+    </div>
+    <div>
+        <img src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/3/000/00a/06c/01a1733.jpg" title="Ricardo Marta" />
+        <br />Ricardo Marta
+        <br />27074
+        <br /><a href="mailto:ricardo.marta@gmail.com">ricardo.marta@gmail.com</a>
+    </div>
+</div>
