adicionado script e css joint no BundleConfig adicionado css ao Content e js ao Scripts adicionada pasta config e ficheiro de configuração de email adicionado modelo de Mail com 3 classes, Mailer, MailLoadConfiguration e MailModel corrigidas views (about, contact, home) e controllers (home) adicionado «authentication mode="Forms"» no web.config adicionado «customErrors mode="On"» no web.config adicionado Application_Error no Global.asax adicionados os modelos de Account (RemoveAccountViewModel, RecoverViewModel)

--- a/RawERD/Views/Error/Forbidden.cshtml
+++ b/RawERD/Views/Error/Forbidden.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "Forbidden";
-    Layout = null;
 }
 
 <h2>Error 403 - Forbidden</h2>
-<p>Thou shall not pass! Please go back.</p>
-
+<p>Thou shall not pass! Please go back.<br/>
+    The request was a valid request, but the server is refusing to respond to it.</p>
