--- a/RawERD/Views/Error/NotFound.cshtml
+++ b/RawERD/Views/Error/NotFound.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "NotFound";
-    Layout = null;
 }
 
 <h2>Error 404 - Not Found</h2>
-<p>It must have been swallowed by a black hole! Please go back.</p>
-
+<p>It must have been swallowed by a black hole! Please go back.<br/>
+    The requested resource could not be found but may be available again in the future.</p>
