--- a/RawERD/Views/Error/Unauthorized.cshtml
+++ b/RawERD/Views/Error/Unauthorized.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "Unauthorized";
-    Layout = null;
 }
 
 <h2>Error 401 - Unauthorized</h2>
-<p>The mighty server has not authorized you to view this page. Please go back.</p>
-
+<p>The mighty server has not authorized you to view this page. Please go back.<br/>
+    Authentication is required and has failed or has not yet been provided.</p>
