--- a/RawERD/Views/Home/Contact.cshtml
+++ b/RawERD/Views/Home/Contact.cshtml
@@ -5,15 +5,14 @@
 <h3>@ViewBag.Message</h3>
 
 <div>
-    <h2>Contact</h2>
     <div>
-        <img src="https://media.licdn.com/media/p/1/005/04c/0a7/016f777.jpg" title="Luís Brás" />
+        <img src="https://media.licdn.com/media/p/1/005/04c/0a7/016f777.jpg" title="Luís Brás" width="50" height="50" />
         <br />Luís Brás
         <br />27401
         <br /><a href="mailto:lbras@lbras.net">lbras@lbras.net</a>
     </div>
     <div>
-        <img src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/3/000/00a/06c/01a1733.jpg" title="Ricardo Marta" />
+        <img src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/3/000/00a/06c/01a1733.jpg" title="Ricardo Marta" width="50" height="50" />
         <br />Ricardo Marta
         <br />27074
         <br /><a href="mailto:ricardo.marta@gmail.com">ricardo.marta@gmail.com</a>
