--- a/RawERD/Views/Error/BadRequest.cshtml
+++ b/RawERD/Views/Error/BadRequest.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "BadRequest";
-    Layout = null;
 }
 
 <h2>Error 400 - BadRequest</h2>
-<p>We do not understand your request, please go back order again.</p>
+<p>We do not understand your request, please go back order again.<br/>
+    The request cannot be fulfilled due to bad syntax.</p>
