--- a/RawERD/Views/Home/Index.cshtml
+++ b/RawERD/Views/Home/Index.cshtml
@@ -1,8 +1,49 @@
-﻿@{
+﻿@using RawERD.Data
+@model IList<User>
+@{
+    IList<User> userList = Model;
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
+    <h1>@ViewBag.Title.</h1>
+    <p class="lead">@ViewBag.Message</p>
+    <p><a href="" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+</div>
+
+<div class="row">
+    <div class="col-md-4">
+        <h2>ID</h2>
+        <p>
+        @foreach (User u in userList.ToList())
+        { @u.idUser<br/> }
+        </p>
+        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Username</h2>
+        <p>
+        @foreach (User u in userList.ToList())
+        { @u.username<br /> }
+        </p>
+        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Name</h2>
+        <p>
+            @foreach (User u in userList.ToList())
+            { @u.name<br /> }
+        </p>
+        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+    </div>
+</div>
+
+
+<!--
+    
+    CONTENT OF INDEX
+
+    <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
@@ -29,3 +70,4 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+-->
