--- a/RawERD/Views/Home/Index.cshtml
+++ b/RawERD/Views/Home/Index.cshtml
@@ -1,42 +1,13 @@
-﻿@using RawERD.Data
-@model IList<User>
-@{
-    IList<User> userList = Model;
+﻿@{
     ViewBag.Title = "Home Page";
+    ViewBag.Message = "What about?";
 }
+<h2>@ViewBag.Title</h2>
+<h3>@ViewBag.Message</h3>
 
-<div class="jumbotron">
-    <h1>@ViewBag.Title.</h1>
-    <p class="lead">@ViewBag.Message</p>
-    <p><a href="" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
+<p>Não usar a autenticação!</p>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>ID</h2>
-        <p>
-        @foreach (User u in userList.ToList())
-        { @u.idUser<br/> }
-        </p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Username</h2>
-        <p>
-        @foreach (User u in userList.ToList())
-        { @u.username<br /> }
-        </p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Name</h2>
-        <p>
-            @foreach (User u in userList.ToList())
-            { @u.name<br /> }
-        </p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
-    </div>
-</div>
+
 
 
 <!--
