Index: criar diagramas aqui

--- a/RawERD/Views/Home/Index.cshtml
+++ b/RawERD/Views/Home/Index.cshtml
@@ -7,7 +7,9 @@
 
 <p>Não usar a autenticação!</p>
 
-
+<div class="maincontainerclass" id="maincontainerid">
+    <h4>Criar o modelo aqui:</h4>
+</div>
 
 
 <!--
