Adicionado EsquemaController: - alterada a view parcial para ter menus de criação de entidade, associação e atributo; - controller criado com EF;

--- a/RawERD/Views/Home/Index.cshtml
+++ b/RawERD/Views/Home/Index.cshtml
@@ -6,11 +6,7 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Não usar a autenticação!</p>
-
-<div class="maincontainerclass" id="maincontainerid">
-    <h4>Criar o modelo aqui:</h4>
-</div>
-
+<p>Para aceder aos esquemas, aceder ao menu esquema na barra de menus.</p>
 
 <!--
     
