--- a/RawERD/Views/Esquema/_EsquemaLayout.cshtml
+++ b/RawERD/Views/Esquema/_EsquemaLayout.cshtml
@@ -21,10 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Esquema", "Esquema", "Esquema")</li>
+                    <li>@Html.ActionLink("N Entidade", "Esquema", "Esquema")</li>
+                    <li>@Html.ActionLink("N Relação", "Esquema", "Esquema")</li>
+                    <li>@Html.ActionLink("N Atributo", "Esquema", "Esquema")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
