indicação de acções no controler EsquemaController

--- a/RawERD/Views/Esquema/_EsquemaLayout.cshtml
+++ b/RawERD/Views/Esquema/_EsquemaLayout.cshtml
@@ -22,9 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Esquema", "Esquema", "Esquema")</li>
-                    <li>@Html.ActionLink("N Entidade", "Esquema", "Esquema")</li>
-                    <li>@Html.ActionLink("N Relação", "Esquema", "Esquema")</li>
-                    <li>@Html.ActionLink("N Atributo", "Esquema", "Esquema")</li>
+                    <li>@Html.ActionLink("N Entidade", "CriarEntidade", "Esquema")</li>
+                    <li>@Html.ActionLink("N Relação", "CriarRelacao", "Esquema")</li>
+                    <li>@Html.ActionLink("N Atributo", "CriarAtributo", "Esquema")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
