--- a/RawERD/Views/Esquema/_EsquemaLayout.cshtml
+++ b/RawERD/Views/Esquema/_EsquemaLayout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewBag.Title - RawERD</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery-ui")
+    @Scripts.Render("~/bundles/joint")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/rawerd")
 
 </head>
 <body>
@@ -36,14 +41,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @*@Scripts.Render("~/bundles/bootstrap")*@
-    <script type="application/javascript" src='@Scripts.Url("js/bootstrap.js")' async></script>
-    <script type="application/javascript" src="js/joint.js" defer></script>
-    <script type="application/javascript" src="js/joint.shapes.erd.js" defer></script>
-    <script type="application/javascript" src="js/jquery-ui-1.10.4.js" defer></script>
-    <script type="application/javascript" src="js/rawerd.js" defer></script>
-    <script type="application/javascript" src="js/respond.js" defer></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
