--- a/RawERD/Views/Home/About.cshtml
+++ b/RawERD/Views/Home/About.cshtml
@@ -17,7 +17,7 @@
         <h2>ID</h2>
         <p>
             @foreach (User u in userList.ToList())
-            { @u.idUser<br /> }
+            { @u.Id<br /> }
         </p>
         <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
     </div>
@@ -25,7 +25,7 @@
         <h2>Username</h2>
         <p>
             @foreach (User u in userList.ToList())
-            { @u.username<br /> }
+            { @u.UserName<br /> }
         </p>
         <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
     </div>
@@ -33,7 +33,7 @@
         <h2>Name</h2>
         <p>
             @foreach (User u in userList.ToList())
-            { @u.name<br /> }
+            { @u.Name<br /> }
         </p>
         <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
     </div>
