--- a/RawERD/Views/Home/Index.cshtml
+++ b/RawERD/Views/Home/Index.cshtml
@@ -1,12 +1,10 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-    ViewBag.Message = "What about?";
 }
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Não usar a autenticação!</p>
-<p>Para aceder aos esquemas, aceder ao menu esquema na barra de menus.</p>
+<p>Para criar um diagrama, aceder ao menu esquema na barra de menus.</p>
 
 <!--
     
