--- a/RawERD/Views/Esquema/Esquema.cshtml
+++ b/RawERD/Views/Esquema/Esquema.cshtml
@@ -2,12 +2,12 @@
     ViewBag.Title = "Esquema";
     Layout = "~/Views/Esquema/_EsquemaLayout.cshtml";
 }
-<h4>Criar o modelo aqui:<br/>
+<!--<h4>Criar o modelo aqui:<br/>
 -> div class="maincontainerclass" id="maincontainerid"</h4>
 <div class="maincontainerclass" id="maincontainerid">
     
 </div>
-
+-->
 
 <nav class="navbar navbar-default navbar-static-top navbar-left" role="navigation">
     <div class="container">
